stack used and other changes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
   </head>
+
   <body class="bg-gray-50">
     <!-- Header -->
     <header class="bg-white shadow-md">
       <div
         class="container mx-auto px-4 py-6 flex items-center justify-between"
       >
-        <div class="text-2xl font-bold text-orange-600">
-          Tigris<span class="text-black">WORKS</span>
-        </div>
+        <img
+          src="assets/icons/logo/tigris.png"
+          alt="Icon"
+          class="inline-block w-[370px] h-[50px]"
+        />
         <button class="bg-orange-600 text-white px-6 py-2 rounded">
           Contact Us
         </button>
@@ -72,9 +75,8 @@
           >
             Software Development Services</span
           >
-
           to<br />
-          Meet Your Need
+          Meet Your Needs
         </h1>
         <p
           class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
@@ -115,6 +117,7 @@
               ensure your users have an enjoyable and efficient experience.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/enterprise.svg"
@@ -145,6 +148,7 @@
               architectural design to drive business innovation and success.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/legacy.svg"
@@ -160,6 +164,7 @@
               ensuring your systems meet current and future needs.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/data.svg"
@@ -195,38 +200,72 @@
         >
           We utilize a modern technology stack to deliver robust, efficient, and
           scalable<br />
-          solutions. Our expertise includes:
+          solutions. Our expertise includes
         </p>
-        <div class="grid md:grid-cols-3 gap-8">
-          <div class="bg-white shadow-lg p-8 rounded-lg">
+
+        <div class="grid md:grid-cols-2 gap-8">
+          <div
+            class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
+          >
+            <img
+              src="assets/icons/stack/front-end.svg"
+              alt="Icon"
+              class="inline-block w-[20px] h-[18px] mb-2"
+            />
             <h3 class="text-xl font-bold mb-4">Front-End Development</h3>
-            <p class="text-gray-600">
-              HTML CSS Javascript Typescript React Vite
-            </p>
-          </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Back-End Development</h3>
-            <p class="text-gray-600">Node.js Python Java Express.js Django</p>
-          </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Databases</h3>
-            <p class="text-gray-600">
-              PostgreSQL MySQL SQL Server MongoDB Cassandra
+            <p class="text-gray-500">
+              Our modern technology stack enables us to craft intuitive and
+              responsive user interfaces, delivering seamless experiences across
+              diverse global markets.
             </p>
           </div>
 
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Devops and Infrastructure</h3>
-            <p class="text-gray-600">
-              GitLab CI GitHub Actions AWS, Azure AWS Cloud Formation
-              ElasticSearch
+          <div
+            class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
+          >
+            <img
+              src="assets/icons/stack/back-end.svg"
+              alt="Icon"
+              class="inline-block w-[20px] h-[18px] mb-2"
+            />
+            <h3 class="text-xl font-bold mb-4">Back-End Development</h3>
+            <p class="text-gray-500">
+              Leveraging our advanced technology stack, we build robust and
+              scalable backend solutions that drive the core functionalities of
+              software systems for global markets.
             </p>
           </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">
-              Project Management and Collaboration
-            </h3>
-            <p class="text-gray-600">Jira Trello Git Github Slack Miro</p>
+
+          <div
+            class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
+          >
+            <img
+              src="assets/icons/stack/cloud.svg"
+              alt="Icon"
+              class="inline-block w-[20px] h-[18px] mb-2"
+            />
+            <h3 class="text-xl font-bold mb-4">Cloud</h3>
+            <p class="text-gray-500">
+              Our cloud infrastructure, supported by a cutting-edge technology
+              stack, ensures high availability and scalability for software
+              solutions catering to diverse global markets.
+            </p>
+          </div>
+
+          <div
+            class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
+          >
+            <img
+              src="assets/icons/stack/db.svg"
+              alt="Icon"
+              class="inline-block w-[20px] h-[18px] mb-2"
+            />
+            <h3 class="text-xl font-bold mb-4">Databases</h3>
+            <p class="text-gray-500">
+              With a modern technology stack, we manage and optimize databases
+              that securely store and process vast amounts of data, meeting the
+              needs of global markets.
+            </p>
           </div>
         </div>
       </div>
@@ -249,97 +288,118 @@
           class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
         >
           At Tigris Works, we follow a structured and efficient process to
-          ensure that every project we undertake is delivered with the highest
-          quality, on time, and within budget. Our approach is customer-centric,
-          transparent, and tailored to meet each client's unique needs.
+          ensure that every<br />
+          project we undertake is delivered with the highest quality, on time,
+          and within<br />
+          budget. Our approach is customer-centric, transparent, and tailored to
+          meet<br />
+          each client's unique needs.
         </p>
 
         <div class="grid md:grid-cols-3 gap-8 text-left">
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/ideation.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/ideation.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
 
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Ideation
-            </h3>
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Ideation
+              </h3>
+            </div>
+
             <p class="text-gray-600">
               We collaboratively brainstorm and refine your idea, ensuring a
               solid foundation for successful development and execution of the
               digital product.
             </p>
           </div>
+
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/design.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Design
-            </h3>
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/design.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Design
+              </h3>
+            </div>
             <p class="text-gray-600">
               Our skilled designers craft visually stunning interfaces, blending
               aesthetics and functionality to elevate your product’s user
               experience.
             </p>
           </div>
+
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/development.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Development
-            </h3>
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/development.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Development
+              </h3>
+            </div>
             <p class="text-gray-600">
               Our expert team brings life into your vision, creating a robust
               digital product that exceeds expectations with precision and
               innovation.
             </p>
           </div>
+
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/testing.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Testing & QA
-            </h3>
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/testing.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Testing & QA
+              </h3>
+            </div>
             <p class="text-gray-600">
               Our thorough testing guarantees a bug-free experience, ensuring
               your digital product performs flawlessly for a superior user
               journey.
             </p>
           </div>
+
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/launch.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Launch
-            </h3>
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/launch.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Launch
+              </h3>
+            </div>
             <p class="text-gray-600">
               Our team manages the launch process, navigating intricacies to
               ensure your digital product reaches its audience seamlessly and
               efficiently.
             </p>
           </div>
+
           <div class="p-5 border border-1 border-gray-200 rounded-lg">
-            <img
-              src="assets/icons/process/maintainence.svg"
-              alt="Icon"
-              class="inline-block align-middle w-[40px] h-[40px] mb-4"
-            />
-            <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
-              Maintenance
-            </h3>
+            <div class="flex justify-start space-x-3 items-center">
+              <img
+                src="assets/icons/process/maintainence.svg"
+                alt="Icon"
+                class="inline-block align-middle w-[40px] h-[40px] mb-4"
+              />
+              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+                Maintenance
+              </h3>
+            </div>
             <p class="text-gray-600">
               Our team provides ongoing support and maintenance to ensure your
               digital product remains up-to-date, secure, and fully functional.
@@ -384,6 +444,7 @@
               stage.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/why-us/expertise.svg"
@@ -398,6 +459,7 @@
               industry knowledge with strategic insights to drive your success.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/why-us/communication.svg"
@@ -427,6 +489,7 @@
               cohesive approach to every project.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/why-us/management.svg"
@@ -441,6 +504,7 @@
               timelines to deliver outstanding results.
             </p>
           </div>
+
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/why-us/cost.svg"
@@ -480,7 +544,14 @@
 
     <!-- Footer -->
     <footer class="bg-gray-100 text-black text-right py-4">
-      <div class="container mx-auto px-4 text-[#98A2B3]">
+      <div
+        class="flex justify-between mx-auto px-4 text-[#98A2B3] align-middle"
+      >
+        <img
+          src="assets/icons/logo/tigrs-footer.png"
+          alt="Icon"
+          class="inline-block w-[144px] h-[48px]"
+        />
         <p>&copy; 2024 TigrisWorks. All rights reserved.</p>
       </div>
     </footer>
