removed fixed text sizes and other changes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       >
         <img
           src="assets/icons/logo/tigris.png"
-          alt="Icon"
+          alt="Tigris Works logo"
           class="inline-block w-[370px] h-[50px]"
         />
-        <button class="bg-orange-600 text-white px-6 py-2 rounded">
+        <button class="bg-orange-600 text-white px-6 py-2 rounded-lg">
           Contact Us
         </button>
       </div>
@@ -57,7 +57,7 @@
             success.
           </p>
 
-          <button class="bg-orange-600 text-white px-8 py-3 rounded">
+          <button class="bg-orange-600 text-white px-8 py-3 rounded-lg">
             Contact Us
           </button>
         </div>
@@ -90,7 +90,7 @@
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/custom.svg"
-              alt="Icon"
+              alt="Icon for custom software dev"
               class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
             />
             <h3 class="text-xl font-medium mb-4">
@@ -121,7 +121,7 @@
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/enterprise.svg"
-              alt="Icon"
+              alt="Icon for enterprise software solution"
               class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
             />
             <h3 class="text-base text-xl font-medium mb-4">
@@ -138,7 +138,7 @@
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/consulting.svg"
-              alt="Icon"
+              alt="Icon for consulting"
               class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
             />
             <h3 class="text-xl font-medium mb-4">Consulting services</h3>
@@ -168,7 +168,7 @@
           <div class="flex flex-col gap-1 p-8 rounded-lg">
             <img
               src="assets/icons/needs/data.svg"
-              alt="Icon"
+              alt="Icon for data analytics"
               class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
             />
             <h3 class="text-xl font-medium mb-4">Data Analytics</h3>
@@ -209,7 +209,7 @@
           >
             <img
               src="assets/icons/stack/front-end.svg"
-              alt="Icon"
+              alt="Icon for Front-End Development"
               class="inline-block w-[20px] h-[18px] mb-2"
             />
             <h3 class="text-xl font-bold mb-4">Front-End Development</h3>
@@ -225,7 +225,7 @@
           >
             <img
               src="assets/icons/stack/back-end.svg"
-              alt="Icon"
+              alt="Icon for Back-End Development"
               class="inline-block w-[20px] h-[18px] mb-2"
             />
             <h3 class="text-xl font-bold mb-4">Back-End Development</h3>
@@ -241,7 +241,7 @@
           >
             <img
               src="assets/icons/stack/cloud.svg"
-              alt="Icon"
+              alt="Icon for cloud"
               class="inline-block w-[20px] h-[18px] mb-2"
             />
             <h3 class="text-xl font-bold mb-4">Cloud</h3>
@@ -305,7 +305,7 @@
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
 
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Ideation
               </h3>
             </div>
@@ -324,7 +324,7 @@
                 alt="Icon"
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Design
               </h3>
             </div>
@@ -342,7 +342,7 @@
                 alt="Icon"
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Development
               </h3>
             </div>
@@ -360,7 +360,7 @@
                 alt="Icon"
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Testing & QA
               </h3>
             </div>
@@ -378,7 +378,7 @@
                 alt="Icon"
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Launch
               </h3>
             </div>
@@ -396,7 +396,7 @@
                 alt="Icon"
                 class="inline-block align-middle w-[40px] h-[40px] mb-4"
               />
-              <h3 class="inline-block align-middle text-[32px] font-bold mb-4">
+              <h3 class="inline-block align-middle text-3xl font-bold mb-4">
                 Maintenance
               </h3>
             </div>
@@ -419,7 +419,6 @@
             class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
             >Us</span
           >
-          ?
         </h1>
         <p
           class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
@@ -533,10 +532,12 @@
           class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
         >
           Unlock the full potential of your business with Tigris Work’s
-          comprehensive software development services. Contact us now to get
-          started on your digital transformation journey.
+          comprehensive<br />
+          software development services. Contact us now to get started on your
+          digital<br />
+          transformation journey.
         </p>
-        <button class="bg-orange-600 text-white px-8 py-3 rounded">
+        <button class="bg-orange-600 text-white px-8 py-3 rounded-lg">
           Contact Us
         </button>
       </div>
@@ -549,7 +550,7 @@
       >
         <img
           src="assets/icons/logo/tigrs-footer.png"
-          alt="Icon"
+          alt="tigris works logo - footer"
           class="inline-block w-[144px] h-[48px]"
         />
         <p>&copy; 2024 TigrisWorks. All rights reserved.</p>
