Footer changes and other styling changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img
           src="assets/icons/logo/tigris.png"
           alt="Tigris Works logo"
-          class="inline-block w-[370px] h-[50px]"
+          class="inline-block h-[35px]"
         />
         <button class="bg-orange-600 text-white px-6 py-2 rounded-lg">
           Contact Us
@@ -49,12 +49,11 @@
           </h1>
 
           <p
-            class="font-inter text-xl font-normal leading-[30px] text-center mb-8"
+            class="font-inter text-lg font-normal leading-[30px] text-center mb-8"
           >
             At Tigris Works, we deliver top-tier custom software development
             services that transform your vision into scalable, innovative
-            solutions designed for long-term<br />
-            success.
+            solutions designed for long-term success.
           </p>
 
           <button class="bg-orange-600 text-white px-8 py-3 rounded-lg">
@@ -67,19 +66,17 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <h1
-          class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-4xl font-bold tracking-[-0.02em] text-center mb-6"
         >
           Tailored
-          <span
-            class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
-          >
+          <span class="font-inter tracking-[-0.02em] text-orange-600">
             Software Development Services</span
           >
           to<br />
           Meet Your Needs
         </h1>
         <p
-          class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
+          class="font-inter text-base font-normal text-center text-[#667085] mb-8"
         >
           Offering custom software development, mobile and web apps, cloud
           solutions,<br />
@@ -91,7 +88,7 @@
             <img
               src="assets/icons/needs/custom.svg"
               alt="Icon for custom software dev"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-xl font-medium mb-4">
               Custom Software Development
@@ -107,7 +104,7 @@
             <img
               src="assets/icons/needs/ui.svg"
               alt="Icon"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-xl font-medium mb-4">UI/UX Design</h3>
             <p class="text-base text-gray-500">
@@ -122,7 +119,7 @@
             <img
               src="assets/icons/needs/enterprise.svg"
               alt="Icon for enterprise software solution"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-base text-xl font-medium mb-4">
               Enterprise Software Solutions
@@ -139,7 +136,7 @@
             <img
               src="assets/icons/needs/consulting.svg"
               alt="Icon for consulting"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-xl font-medium mb-4">Consulting services</h3>
             <p class="text-base text-gray-500">
@@ -153,7 +150,7 @@
             <img
               src="assets/icons/needs/legacy.svg"
               alt="Icon"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-xl font-medium mb-4">
               Legacy System Modernization
@@ -169,7 +166,7 @@
             <img
               src="assets/icons/needs/data.svg"
               alt="Icon for data analytics"
-              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+              class="inline-block w-12 h-12 mb-2"
             />
             <h3 class="text-xl font-medium mb-4">Data Analytics</h3>
             <p class="text-base text-gray-500">
@@ -544,9 +541,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-100 text-black text-right py-4">
+    <footer class="bg-gray-100 text-black text-right py-4 px-12">
       <div
-        class="flex justify-between mx-auto px-4 text-[#98A2B3] align-middle"
+        class="flex justify-between mx-auto px-8 text-[#98A2B3] items-center border-t-2 py-2"
       >
         <img
           src="assets/icons/logo/tigrs-footer.png"
