--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>TigrisWorks - Custom Software Development Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
+    <script>
+      function toggleModal(visible) {
+        const modal = document.getElementById("contactModal");
+        if (visible) {
+          modal.classList.remove("hidden");
+        } else {
+          document.getElementById("contactForm").reset();
+          modal.classList.add("hidden");
+        }
+      }
+    </script>
   </head>
 
   <body class="bg-gray-50">
@@ -19,7 +30,10 @@
           alt="Tigris Works logo"
           class="inline-block h-[35px]"
         />
-        <button class="bg-orange-600 text-white px-6 py-2 rounded-lg">
+        <button
+          class="bg-orange-600 text-white px-6 py-2 rounded-lg"
+          onclick="toggleModal(true)"
+        >
           Contact Us
         </button>
       </div>
@@ -56,9 +70,90 @@
             solutions designed for long-term success.
           </p>
 
-          <button class="bg-orange-600 text-white px-8 py-3 rounded-lg">
-            Contact Us
-          </button>
+          <div class="relative">
+            <button
+              class="bg-orange-600 text-white px-6 py-2 rounded-lg"
+              onclick="toggleModal(true)"
+            >
+              Contact Us
+            </button>
+
+            <!-- Modal -->
+            <div
+              id="contactModal"
+              class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden"
+            >
+              <div class="bg-white p-8 rounded-lg w-384 h-218 relative">
+                <h2 class="text-2xl mb-4 text-black font-medium">Contact Us</h2>
+                <p class="text-base text-gray-500 mb-4">
+                  Elevate your business to new heights with Tigris Work's expert
+                  software development services. Reach out to us<br />
+                  today and begin your path to digital transformation.
+                </p>
+                <form id="contactForm">
+                  <div class="mb-4 text-left">
+                    <label class="block text-gray-700 text-sm font-bold mb-2">
+                      Name:
+                      <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        type="text"
+                        placeholder="Your name"
+                        id="name"
+                        name="name"
+                      />
+                    </label>
+                  </div>
+                  <div class="mb-4 text-left">
+                    <label class="block text-gray-700 text-sm font-bold mb-2">
+                      Email:
+                      <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        type="email"
+                        placeholder="Your email"
+                        id="email"
+                        name="email"
+                      />
+                    </label>
+                  </div>
+                  <div class="mb-4 text-left">
+                    <label class="block text-gray-700 text-sm font-bold mb-2">
+                      Message:
+                      <textarea
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        rows="3"
+                        placeholder="Your message"
+                        id="message"
+                        name="message"
+                      ></textarea>
+                    </label>
+                  </div>
+                  <div class="flex justify-end">
+                    <button
+                      type="button"
+                      class="bg-gray-500 text-white px-4 py-2 rounded-lg mr-4"
+                      onclick="toggleModal(false)"
+                      id="cancel"
+                      name="cancel"
+                    >
+                      Cancel
+                    </button>
+                    <a
+                      href="mailto:nancy@aptlylabs.com?subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!"
+                      target="_blank"
+                      ><button
+                        type="submit"
+                        class="bg-orange-600 text-white px-6 py-2 rounded-lg"
+                        id="send"
+                        name="send"
+                      >
+                        Send
+                      </button></a
+                    >
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -534,7 +629,10 @@
           digital<br />
           transformation journey.
         </p>
-        <button class="bg-orange-600 text-white px-8 py-3 rounded-lg">
+        <button
+          class="bg-orange-600 text-white px-8 py-3 rounded-lg"
+          onclick="toggleModal(true)"
+        >
           Contact Us
         </button>
       </div>
