--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           class="inline-block h-[35px]"
         />
         <button
-          class="bg-orange-600 text-white px-6 py-2 rounded-lg"
+          class="bg-orange-600 text-white px-6 py-2 rounded-lg hidden md:block"
           onclick="toggleModal(true)"
         >
           Contact Us
@@ -48,7 +48,7 @@
       >
         <div>
           <h1
-            class="font-inter text-6xl font-semibold text-center relative mb-6"
+            class="font-inter text-3xl md:text-6xl font-bold text-center relative mb-6"
           >
             Leading
             <span
@@ -63,7 +63,7 @@
           </h1>
 
           <p
-            class="font-inter text-lg font-normal leading-[30px] text-center mb-8"
+            class="font-inter text-sm md:text-lg font-normal leading-4 text-center mb-8"
           >
             At Tigris Works, we deliver top-tier custom software development
             services that transform your vision into scalable, innovative
@@ -161,7 +161,7 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <h1
-          class="font-inter text-4xl font-bold tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-2xl md:text-4xl font-bold tracking-[-0.02em] text-center mb-6"
         >
           Tailored
           <span class="font-inter tracking-[-0.02em] text-orange-600">
@@ -299,12 +299,14 @@
           <div
             class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
           >
-            <img
-              src="assets/icons/stack/front-end.svg"
-              alt="Icon for Front-End Development"
-              class="inline-block w-[20px] h-[18px] mb-2"
-            />
-            <h3 class="text-xl font-bold mb-4">Front-End Development</h3>
+            <div class="flex items-center gap-2">
+              <img
+                src="assets/icons/stack/front-end.svg"
+                alt="Icon for Front-End Development"
+                class="inline-block w-5 h-5"
+              />
+              <h3 class="text-xl font-bold">Front-End Development</h3>
+            </div>
             <p class="text-gray-500">
               Our modern technology stack enables us to craft intuitive and
               responsive user interfaces, delivering seamless experiences across
@@ -315,12 +317,14 @@
           <div
             class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
           >
-            <img
-              src="assets/icons/stack/back-end.svg"
-              alt="Icon for Back-End Development"
-              class="inline-block w-[20px] h-[18px] mb-2"
-            />
-            <h3 class="text-xl font-bold mb-4">Back-End Development</h3>
+            <div class="flex items-center gap-2">
+              <img
+                src="assets/icons/stack/back-end.svg"
+                alt="Icon for Back-End Development"
+                class="inline-block w-5 h-5"
+              />
+              <h3 class="text-xl font-bold">Back-End Development</h3>
+            </div>
             <p class="text-gray-500">
               Leveraging our advanced technology stack, we build robust and
               scalable backend solutions that drive the core functionalities of
@@ -331,12 +335,14 @@
           <div
             class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
           >
-            <img
-              src="assets/icons/stack/cloud.svg"
-              alt="Icon for cloud"
-              class="inline-block w-[20px] h-[18px] mb-2"
-            />
-            <h3 class="text-xl font-bold mb-4">Cloud</h3>
+            <div class="flex items-center gap-2">
+              <img
+                src="assets/icons/stack/cloud.svg"
+                alt="Icon for cloud"
+                class="inline-block w-5 h-5"
+              />
+              <h3 class="text-xl font-bold">Cloud</h3>
+            </div>
             <p class="text-gray-500">
               Our cloud infrastructure, supported by a cutting-edge technology
               stack, ensures high availability and scalability for software
@@ -347,12 +353,14 @@
           <div
             class="flex flex-col border border-1 border-gray-200 p-8 rounded-xl text-left"
           >
-            <img
-              src="assets/icons/stack/db.svg"
-              alt="Icon"
-              class="inline-block w-[20px] h-[18px] mb-2"
-            />
-            <h3 class="text-xl font-bold mb-4">Databases</h3>
+            <div class="flex items-center gap-2">
+              <img
+                src="assets/icons/stack/db.svg"
+                alt="Icon for db"
+                class="inline-block w-5 h-5"
+              />
+              <h3 class="text-xl font-bold">Databases</h3>
+            </div>
             <p class="text-gray-500">
               With a modern technology stack, we manage and optimize databases
               that securely store and process vast amounts of data, meeting the
@@ -641,14 +649,16 @@
     <!-- Footer -->
     <footer class="bg-gray-100 text-black text-right py-4 px-12">
       <div
-        class="flex justify-between mx-auto px-8 text-[#98A2B3] items-center border-t-2 py-2"
+        class="flex flex-col md:flex-row md: justify-between mx-auto px-8 text-[#98A2B3] items-center border-t-2 py-2"
       >
         <img
           src="assets/icons/logo/tigrs-footer.png"
           alt="tigris works logo - footer"
           class="inline-block w-[144px] h-[48px]"
         />
-        <p>&copy; 2024 TigrisWorks. All rights reserved.</p>
+        <p class="text-center md:text-right">
+          &copy; 2024 TigrisWorks. All rights reserved.
+        </p>
       </div>
     </footer>
   </body>
