Brand logo added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         class="container mx-auto px-4 py-6 flex items-center justify-between"
       >
         <img
-          src="assets/icons/logo/tigris.png"
+          src="assets/icons/logo/brand.svg"
           alt="Tigris Works logo"
           class="inline-block h-[35px]"
         />
@@ -642,7 +642,7 @@
         class="flex flex-col md:flex-row md: justify-between mx-auto px-8 text-[#98A2B3] items-center border-t-2 py-2"
       >
         <img
-          src="assets/icons/logo/tigrs-footer.png"
+          src="assets/icons/logo/brand.svg"
           alt="tigris works logo - footer"
           class="inline-block w-[144px] h-[48px]"
         />
