Updated Button Styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           class="inline-block h-[35px]"
         />
         <button
-          class="bg-orange-600 text-white px-6 py-2 rounded-lg hidden md:block"
+          class="text-white bg-orange-600 hover:bg-orange-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none hidden md:block"
           onclick="toggleModal(true)"
         >
           Contact Us
@@ -68,7 +68,8 @@
           </p>
 
           <button
-            class="w-full bg-orange-600 text-white px-6 py-2 rounded-lg max-w-auto max-w-sm"
+            type="button"
+            class="text-white bg-orange-600 hover:bg-orange-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none w-full sm:w-auto"
             onclick="toggleModal(true)"
           >
             Contact Us
@@ -628,7 +629,7 @@
           transformation journey.
         </p>
         <button
-          class="bg-orange-600 text-white px-8 py-3 rounded-lg"
+          class="text-white bg-orange-600 hover:bg-orange-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none"
           onclick="toggleModal(true)"
         >
           Contact Us
