--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>TigrisWorks - Custom Software Development Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/icons/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/icons/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/icons/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/icons/favicons/site.webmanifest" />
+
     <script>
       function toggleModal(visible) {
         const modal = document.getElementById("contactModal");
