--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
       href="/assets/icons/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="/assets/icons/favicons/site.webmanifest" />
-
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("0pBVBgDRxrVelGGCq");
+      })();
+    </script>
     <script>
       function toggleModal(visible) {
         const modal = document.getElementById("contactModal");
@@ -35,6 +43,36 @@
           document.getElementById("contactForm").reset();
           modal.classList.add("hidden");
         }
+      }
+
+      function sendMail(event) {
+        event.preventDefault();
+
+        const name = document.getElementById("name").value;
+        const email = document.getElementById("email").value;
+        const message = document.getElementById("message").value;
+
+        const templateParams = {
+          from_name: name,
+          from_email: email,
+          message: message,
+        };
+
+        emailjs
+          .send("service_xwvr8sr", "template_nc8kgkr", templateParams)
+          .then(
+            function (response) {
+              toggleModal(false);
+              console.log("SUCCESS!", response.status, response.text);
+              alert("Your message has been sent successfully!");
+            },
+            function (error) {
+              console.log("FAILED...", error);
+              alert(
+                "There was an error sending your message. Please try again later."
+              );
+            }
+          );
       }
     </script>
   </head>
@@ -103,11 +141,11 @@
             <div class="bg-white p-8 rounded-lg w-384 h-218 relative">
               <h2 class="text-2xl mb-4 text-black font-medium">Contact Us</h2>
               <p class="text-base text-gray-500 mb-4">
-                Elevate your business to new heights with Tigris Work's expert
+                Elevate your business to new heights with Tigris Works expert
                 software development services. Reach out to us<br />
                 today and begin your path to digital transformation.
               </p>
-              <form id="contactForm">
+              <form id="contactForm" onsubmit="sendMail(event)">
                 <div class="mb-4 text-left">
                   <label class="block text-gray-700 text-sm font-bold mb-2">
                     Name:
@@ -117,6 +155,7 @@
                       placeholder="Your name"
                       id="name"
                       name="name"
+                      required
                     />
                   </label>
                 </div>
@@ -129,6 +168,7 @@
                       placeholder="Your email"
                       id="email"
                       name="email"
+                      required
                     />
                   </label>
                 </div>
@@ -141,6 +181,7 @@
                       placeholder="Your message"
                       id="message"
                       name="message"
+                      required
                     ></textarea>
                   </label>
                 </div>
@@ -562,7 +603,7 @@
               class="inline-block w-[48px] h-[48px] p-[12px_0_0_0] mb-2"
             />
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
-              Excellent Business expertise
+              Excellent Business Expertise
             </h3>
             <p class="text-base text-gray-500 text-sm md:text-base">
               We bring excellent business expertise to the table, combining
