--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         } else {
           document.getElementById("contactForm").reset();
           modal.classList.add("hidden");
+          document.getElementById("loader").style.display = "none";
         }
       }
 
@@ -65,14 +66,19 @@
               toggleModal(false);
               console.log("SUCCESS!", response.status, response.text);
               alert("Your message has been sent successfully!");
+              document.getElementById("loader").style.display = "none";
             },
             function (error) {
               console.log("FAILED...", error);
               alert(
                 "There was an error sending your message. Please try again later."
               );
+              document.getElementById("loader").style.display = "none";
             }
           );
+      }
+      function showLoader() {
+        document.getElementById("loader").style.display = "inline-block";
       }
     </script>
   </head>
@@ -146,49 +152,61 @@
                 today and begin your path to digital transformation.
               </p>
               <form id="contactForm" onsubmit="sendMail(event)">
-                <div class="mb-4 text-left">
-                  <label class="block text-gray-700 text-sm font-bold mb-2">
+                <div class="mb-5 text-left">
+                  <label
+                    for="name"
+                    class="block mb-2 text-sm font-medium text-gray-900"
+                  >
                     Name:
-                    <input
-                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                      type="text"
-                      placeholder="Your name"
-                      id="name"
-                      name="name"
-                      required
-                    />
                   </label>
+                  <input
+                    class="bg-white border border-white-300 text-white-900 text-sm rounded-lg focus:ring-gray-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-gray-500 dark:focus:border-gray-500"
+                    type="text"
+                    placeholder="Your name"
+                    id="name"
+                    name="name"
+                    required
+                    autocomplete="off"
+                  />
                 </div>
                 <div class="mb-4 text-left">
-                  <label class="block text-gray-700 text-sm font-bold mb-2">
+                  <label
+                    label
+                    for="email"
+                    class="block mb-2 text-sm font-medium text-gray-900"
+                  >
                     Email:
-                    <input
-                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                      type="email"
-                      placeholder="Your email"
-                      id="email"
-                      name="email"
-                      required
-                    />
                   </label>
+                  <input
+                    class="bg-white border border-white-300 text-white-900 text-sm rounded-lg focus:ring-gray-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-gray-500 dark:focus:border-gray-500"
+                    type="email"
+                    placeholder="Your email"
+                    id="email"
+                    name="email"
+                    required
+                    autocomplete="off"
+                  />
                 </div>
                 <div class="mb-4 text-left">
-                  <label class="block text-gray-700 text-sm font-bold mb-2">
+                  <label
+                    for="message"
+                    class="block mb-2 text-sm font-medium text-gray-900"
+                  >
                     Message:
-                    <textarea
-                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                      rows="3"
-                      placeholder="Your message"
-                      id="message"
-                      name="message"
-                      required
-                    ></textarea>
                   </label>
+                  <textarea
+                    class="bg-white border border-white-300 text-white-900 text-sm rounded-lg focus:ring-gray-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-gray-500 dark:focus:border-gray-500"
+                    rows="3"
+                    placeholder="Your message"
+                    id="message"
+                    name="message"
+                    required
+                  ></textarea>
                 </div>
                 <div class="flex justify-end">
                   <button
                     type="button"
-                    class="bg-gray-500 text-white px-4 py-2 rounded-lg mr-4"
+                    class="text-white bg-gray-500 hover:bg-gray-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none"
                     onclick="toggleModal(false)"
                     id="cancel"
                     name="cancel"
@@ -200,13 +218,32 @@
                     target="_blank"
                     ><button
                       type="submit"
-                      class="bg-orange-600 text-white px-6 py-2 rounded-lg"
+                      class="text-white bg-orange-600 hover:bg-orange-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:outline-none"
                       id="send"
                       name="send"
+                      onclick="showLoader()"
                     >
                       Send
-                    </button></a
-                  >
+                      <svg
+                        aria-hidden="true"
+                        role="status"
+                        class="w-4 h-4 ms-1 me-1 mb-1 text-white animate-spin"
+                        viewBox="0 0 100 101"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        id="loader"
+                        style="display: none"
+                      >
+                        <path
+                          d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                          fill="#E5E7EB"
+                        />
+                        <path
+                          d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                          fill="currentColor"
+                        />
+                      </svg></button
+                  ></a>
                 </div>
               </form>
             </div>
